--- a/photostory.html
+++ b/photostory.html
@@ -17,8 +17,8 @@ padding:20px;}
 
 #photointro { width:600px;
             text-align: justify;
-			margin: 0;
-	        margin-left:350px}
+				margin:0 auto;
+}
 
 	#container{
 		margin: 0 auto;
