--- a/videostory.html
+++ b/videostory.html
@@ -19,8 +19,7 @@ padding:20px;}
 
 #videointro { width:600px;
             text-align: justify;
-			margin: 0;
-	        margin-left:350px}
+			margin:0 auto;}
 </style>
 
 <body>
