--- a/audiostory.html
+++ b/audiostory.html
@@ -18,8 +18,7 @@ padding:20px;}
 
 #audiointro { width:600px;
             text-align: justify;
-			margin: 0;
-	        margin-left:350px}
+			margin:0 auto;}
 
 
 </style>
