--- a/videostory.html
+++ b/videostory.html
@@ -51,7 +51,7 @@ Video Story </font></h>
 <p><font face="Candara" size="3" color="#24a97a">Video By Donglingyue, XU Mengqian, Ren Haoyao, Qi Yu
 <br><br><br>
 <video width="720" height="540" controls>
-  <source src="http://204.44.91.198/video.mp4" type="video/mp4">
+  <source src="https://onedrive.live.com/embed?cid=F28EA6C7761049EF&resid=F28EA6C7761049EF%2131454&authkey=AH-NpI5ODmJ1MpQ" type="video/mp4">
 </video>
 <div id="section1">
 <br>
