--- a/videostory.html
+++ b/videostory.html
@@ -50,9 +50,8 @@ Video Story </font></h>
 <br>
 <p><font face="Candara" size="3" color="#24a97a">Video By Donglingyue, XU Mengqian, Ren Haoyao, Qi Yu
 <br><br><br>
-<video width="720" height="540" controls>
-  <source src="https://onedrive.live.com/embed?cid=F28EA6C7761049EF&resid=F28EA6C7761049EF%2131454&authkey=AH-NpI5ODmJ1MpQ" type="video/mp4">
-</video>
+
+<iframe scr=""https://onedrive.live.com/embed?cid=F28EA6C7761049EF&resid=F28EA6C7761049EF%2131454&authkey=AH-NpI5ODmJ1MpQ" width="720" height="540" frame border="0" scrolling="no" allowfullscreen></iframe>
 <div id="section1">
 <br>
 <h3><br><font face="Candara" size="3" color="#458B74">
