--- a/videostory.html
+++ b/videostory.html
@@ -51,7 +51,7 @@ Video Story </font></h>
 <p><font face="Candara" size="3" color="#24a97a">Video By Donglingyue, XU Mengqian, Ren Haoyao, Qi Yu
 <br><br><br>
 
-<iframe scr=""https://onedrive.live.com/embed?cid=F28EA6C7761049EF&resid=F28EA6C7761049EF%2131454&authkey=AH-NpI5ODmJ1MpQ" width="720" height="540" frame border="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://onedrive.live.com/embed?cid=F28EA6C7761049EF&resid=F28EA6C7761049EF%2131454&authkey=AH-NpI5ODmJ1MpQ" width="720" height="540" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <div id="section1">
 <br>
 <h3><br><font face="Candara" size="3" color="#458B74">
