--- a/videostory.html
+++ b/videostory.html
@@ -51,8 +51,7 @@ Video Story </font></h>
 <p><font face="Candara" size="3" color="#24a97a">Video By Donglingyue, XU Mengqian, Ren Haoyao, Qi Yu
 <br><br><br>
 
-<iframe src="https://v.qq.com/x/page/n053747kzb7.html" width="320" height="180" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<div id="section1">
+<iframe frameborder="0" width="640" height="498" src="https://v.qq.com/iframe/player.html?vid=n053747kzb7&tiny=0&auto=0" allowfullscreen></iframe>
 <br>
 <h3><br><font face="Candara" size="3" color="#458B74">
 <u><b>"If You Keep Low-key, No One Knows What You Are Doing"</b></u></font></h3>
