--- a/contactme.html
+++ b/contactme.html
@@ -50,8 +50,8 @@ padding:20px;}
 
 <div id="contactme">
 <br><br><br>
-<p><font face="Candara" size="3" color="#458B74">E-mail: 16401751@life.hkbu.edu.hk</font></p>
-<p><font face="Candara" size="3" color="#458B74">Mobile: 67387068</font></p>
+<p><font face="Candara" size="3" color="#458B74">E-mail: xmqhkbu@163.com </font></p>
+<p><font face="Candara" size="3" color="#458B74">Mobile: +86 15757128575 </font></p>
 <p><font face="Candara" size="3" color="#458B74">WeChat: 67387068</font></p>
 </div>
 
